# simple-ddl-generator

./: .flake8  .gitignore  CHANGELOG.txt  README.md  pyproject.toml
docs/: README.rst
simple_ddl_generator/: __init__.py  core.py  generator.py  models_data.py  test.py  type_converter.py
simple_ddl_generator/templates/: before_table.jinja2  column.jinja2  column_base.jinja2  common.jinja2  create_table.jinja2  table_properties.jinja2
simple_ddl_generator/templates/table/: before_table.jinja2  column.jinja2  create_table.jinja2  table_properties.jinja2
simple_ddl_generator/templates/type/: create_type.jinja2
tests/: test_common.py  test_py_models_parser_output.py  test_simple_ddl_generator.py
