[tool.poetry]
name = "simple-ddl-generator"
version = "0.1.0"
description = "Library to generate DDL for different dialects"
authors = ["Iuliia Volkova <xnuinside@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
table-meta = "^0.1.5"
jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
simple-ddl-parser = "^0.24.0"
m2r2 = "^0.3.2"
twine = "^3.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
