[tool.poetry]
name = "simple-ddl-generator"
version = "0.4.0"
description = "Library to generate DDL for different dialects"
authors = ["Iuliia Volkova <xnuinside@gmail.com>"]
readme = "docs/README.rst"
classifiers = [
    "Programming Language :: PL/SQL",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
table-meta = "0.3.1"
jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
simple-ddl-parser = "^0.24.1"
m2r2 = "^0.3.2"
twine = "^3.7.1"
pre-commit = "^2.16.0"
py-models-parser = "^0.6.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
